[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feagi-bv-macos"
version = "2.0.4"
description = "Brain Visualizer binaries for macOS (part of feagi-bv)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Neuraville Inc.", email = "feagi@neuraville.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[tool.setuptools]
packages = { find = {} }
include-package-data = true

[tool.setuptools.package-data]
feagi_bv_macos = [
    "bin/**/*",
]
