[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feagi-bv"
version = "1.0.0"
description = "Brain Visualizer runtime package for FEAGI (meta-package)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Neuraville Inc.", email = "feagi@neuraville.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "feagi>=2.0.0",
    "toml>=0.10.2",
    'feagi-bv-linux>=2.0.0 ; sys_platform == "linux"',
    'feagi-bv-macos>=2.0.0 ; sys_platform == "darwin"',
    'feagi-bv-windows>=2.0.0 ; sys_platform == "win32"',
]

[tool.setuptools]
packages = { find = {} }

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []
