[package]
name = "feagi_data_deserializer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Godot Rust bindings
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-wasm", "lazy-function-tables"] }

# FEAGI data serialization library (local paths to feagi-core)
feagi-data-serialization = { path = "../../../feagi-core/crates/feagi-data-serialization" }
feagi-data-structures = { path = "../../../feagi-core/crates/feagi-data-structures" }
# FEAGI data processing library for FDP decoding (local path to feagi-core)
feagi-connector-core = { path = "../../../feagi-core/crates/feagi-connector-core" }

# Additional dependencies for data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lz4 = "1.28"  # LZ4 decompression for FEAGI visualization stream (matches PNS compression)
base64 = "0.22"  # For decoding base64-encoded cortical IDs

# Parallel processing for high-performance neuron visualization (desktop only)
# Note: Rayon doesn't work in WASM, so we use conditional compilation
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rayon = "1.8"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true