[package]
name = "feagi_data_deserializer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Godot Rust bindings
godot = { git = "https://github.com/godot-rust/gdext", rev = "3416265e2f894be3c1a916f8590524f7be94ed3f", features = ["experimental-wasm", "lazy-function-tables", "api-4-5"] }

# FEAGI data serialization (crates.io release)
feagi-serialization = { version = "0.0.1-beta.19" }
feagi-structures = { version = "0.0.1-beta.19" }
feagi-sensorimotor = { version = "0.0.1-beta.19" }

# Additional dependencies for data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lz4 = "1.28"  # LZ4 decompression for FEAGI visualization stream (matches PNS compression)
base64 = "0.22"  # For decoding base64-encoded cortical IDs

# Parallel processing for high-performance neuron visualization (desktop only)
# Note: Rayon doesn't work in WASM, so we use conditional compilation
[target.'cfg(not(target_family = "wasm"))'.dependencies]
rayon = "1.8"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Optimize for performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true