[package]
name = "feagi_embedded"
version = "2.1.0"
edition = "2021"
authors = ["Neuraville Inc. <feagi@neuraville.com>"]
license = "Apache-2.0"
description = "FEAGI Embedded - GDExtension for running FEAGI in Godot applications"

[dependencies]
# Godot Rust bindings (desktop only - no WASM support for embedded FEAGI)
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }

# FEAGI library (local path)
feagi = { path = "../../../feagi-rs", default-features = false, features = ["embedded"] }
feagi-config = { version = "0.0.1-beta.2" }
feagi-npu-burst-engine = { version = "0.0.1-beta.2" }

# Error handling
anyhow = "1.0"

# Logging (bridge Rust logs to Godot console)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Concurrency
parking_lot = "0.12"
crossbeam-channel = "0.5"

[lib]
crate-type = ["cdylib"]

[profile.release]
# Optimize for performance
opt-level = 3
lto = "fat"
codegen-units = 1
# Keep symbols for debugging (remove for production)
strip = false

[profile.dev]
# Faster compilation for development
opt-level = 0
debug = true

