[package]
name = "feagi_type_system"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "FEAGI Cortical Type System GDExtension - Exposes feagi-data-processing types to Godot"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Godot 4 bindings
godot = { git = "https://github.com/godot-rust/gdext", rev = "3416265e2f894be3c1a916f8590524f7be94ed3f", features = ["serde", "api-4-5"] }

# FEAGI core dependencies (crates.io)
feagi-structures = { version = "0.0.1-beta.18" }
feagi-sensorimotor = { version = "0.0.1-beta.18" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"

[profile.dev]
opt-level = 1  # Faster dev builds

[profile.release]
opt-level = 3
lto = true
strip = true

